# photostax

./: .gitignore  ANALYSIS.txt  API_COMPARISON_REPORT.txt  API_SUMMARY.txt  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  create-release.yml  release.yml
bindings/dotnet/: Photostax.sln  README.md
bindings/dotnet/src/Photostax/: IRepositoryProvider.cs  ImageFormat.cs  ImageRef.cs  ImageVariants.cs  Metadata.cs  MetadataRef.cs  PaginatedResult.cs  PhotoStack.cs  Photostax.csproj  PhotostaxException.cs  PhotostaxRepository.cs  QueryResult.cs  RotationTarget.cs  ScanPhase.cs  ScanSnapshot.cs  ScannerProfile.cs  SearchQuery.cs  SnapshotStatus.cs  StackManager.cs
bindings/dotnet/src/Photostax/Native/: NativeMethods.cs  NativeTypes.cs  SafeHandles.cs
bindings/dotnet/tests/Photostax.Tests/: ImageFormatTests.cs  MetadataTests.cs  NativeTypeTests.cs  PaginatedResultTests.cs  PhotoStackTests.cs  Photostax.Tests.csproj  PhotostaxExceptionTests.cs  QueryResultTests.cs  RepositoryTests.cs  SearchTests.cs
bindings/typescript/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  index.ts  jest.config.js  package-lock.json  package.json  tsconfig.json
bindings/typescript/__tests__/: metadata.test.ts  mock.test.ts  repository.test.ts  search.test.ts
bindings/typescript/src/: lib.rs
cli/: Cargo.toml  README.md
cli/src/: lib.rs  main.rs
cli/tests/: cli_tests.rs
core/: Cargo.toml  README.md
core/src/: classifier.rs  classify.rs  events.rs  file_access.rs  hashing.rs  image_handle.rs  lib.rs  metadata_handle.rs  photo_stack.rs  query_result.rs  repository.rs  scanner.rs  search.rs  snapshot.rs  stack_manager.rs
core/src/backends/: foreign.rs  local.rs  local_handles.rs  mod.rs
core/src/metadata/: exif.rs  mod.rs  sidecar.rs  xmp.rs
core/tests/: generate_testdata.rs  integration_test.rs  test_helpers.rs  validate_testdata.rs
core/tests/testdata/: FamilyPhotos_0003_a.tif
docs/: MIGRATION.md  architecture.md  bindings-guide.md  fastfoto-convention.md  metadata-strategy.md
ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml  photostax.h
ffi/src/: foreign_provider.rs  lib.rs  metadata.rs  repository.rs  search.rs  snapshot.rs  types.rs
