[workspace]
resolver = "2"
members = [
    "core",
    "cli",
    "ffi",
]
exclude = [
    "bindings/typescript",
]

[workspace.package]
version = "0.1.10"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JeromySt/photostax"
authors = ["JeromySt"]
rust-version = "1.70"
