[package]
name = "photostax-cli"
description = "CLI tool for inspecting and managing Epson FastFoto photo stacks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
photostax-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
