[package]
name = "photostax-cli"
description = "CLI tool for inspecting and managing Epson FastFoto photo stacks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["epson", "fastfoto", "photo", "cli", "scanner"]
categories = ["command-line-utilities", "multimedia::images"]
readme = "README.md"

[dependencies]
photostax-core = { version = "0.4.1", path = "../core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
