[package]
name = "photostax-core"
description = "Unified photo stack library for Epson FastFoto repositories"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde_json = "1"
thiserror = "2"
tempfile = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"

[lib]
name = "photostax_core"
path = "src/lib.rs"
