[package]
name = "photostax-core"
description = "Unified photo stack library for Epson FastFoto repositories"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
kamadak-exif = "0.6"
rusqlite = { version = "0.34", features = ["bundled"] }
img-parts = "0.3"

[dev-dependencies]
tempfile = "3"

[lib]
name = "photostax_core"
path = "src/lib.rs"
