[package]
name = "photostax-core"
description = "Unified photo stack library for Epson FastFoto repositories — scanning, metadata, and search"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["epson", "fastfoto", "photo", "scanner", "exif"]
categories = ["multimedia::images", "filesystem"]
readme = "README.md"
documentation = "https://docs.rs/photostax-core"
exclude = ["tests/testdata/*"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
kamadak-exif = "0.6"
img-parts = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "tiff"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[lib]
name = "photostax_core"
path = "src/lib.rs"
