[package]
name = "photostax-ffi"
description = "C FFI bindings for the photostax-core library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
photostax-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cbindgen = "0.27"
