[package]
name = "photostax-ffi"
description = "C FFI bindings for the photostax-core library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["epson", "fastfoto", "ffi", "c-api", "bindings"]
categories = ["api-bindings", "multimedia::images"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
photostax-core = { version = "0.2.0", path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[build-dependencies]
cbindgen = "0.29"
